<resources>
    <string name="app_name">RathoreKaApp</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="appname">TalentX</string>
    <string name="email">Email</string>
    <string name="alreadyRegistered">Already registered? Log in!</string>
    <string name="just_a_moment">Just a moment</string>
    <string name="contact_number">Contact Number</string>
</resources>
